# SvelteServo

./: LICENSE.txt  README.md
USBServoPlatform-project/: CMakeLists.txt
USBServoPlatform-project/USBServoPlatformApp/: BezierCurve.c  BezierCurve.h  CMakeLists.txt  ClosedLoopServoController.c  ClosedLoopServoController.h  Core0Commands.c  Core0Commands.h  Core1Commands.c  Core1Commands.h  CoreCommunication.c  CoreCommunication.h  LEDController.c  LEDController.h  MT6701Encoder.c  MT6701Encoder.h  RamVariablesCore0.c  RamVariablesCore0.h  RamVariablesCore1.c  RamVariablesCore1.h  SimulatedServoMotor.c  SimulatedServoMotor.h  USBCommunicationProtocol.c  USBCommunicationProtocol.h  USBServoPlatformApp.c  macro_header.h  usb_descriptors.c
pico-sdk/src/rp2_common/pico_stdio_usb/: CMakeLists.txt
